[project]
name = "bharat-nyaya-llm"
version = "0.1.0"
description = "A fine-tuned LLM for Indian criminal law — mapping crime descriptions to Bharatiya Nyaya Sanhita (BNS) sections"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }

dependencies = [
    # Core training
    "torch>=2.1.0",
    "transformers>=4.40.0",
    "trl>=0.8.0",
    "peft>=0.10.0",
    "accelerate>=0.30.0",
    "bitsandbytes>=0.43.0",
    "datasets>=2.19.0",

    # Experiment tracking
    "mlflow>=2.12.0",

    # Evaluation
    "deepeval>=0.21.0",

    # Deployment
    "gradio>=4.25.0",
    "llama-cpp-python>=0.2.0",
    "huggingface-hub>=0.23.0",

    # Data processing
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "anthropic>=0.25.0",
    "openai>=1.25.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "jupyterlab>=4.1.0",
    "ipywidgets>=8.1.0",
    "ipykernel>=6.29.0",
    "ruff>=0.4.0",
]

# Unsloth must be installed separately — it has its own CUDA-specific install
# pip install "unsloth[cu121-torch250] @ git+https://github.com/unslothai/unsloth.git"
unsloth = []

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
